# go/api_fel.go
@@ -1,0 +1,33 @@
+/*
+ * Datamonkey API
+ *
+ * Datamonkey is a free public server for comparative analysis of sequence alignments using state-of-the-art statistical models. <br> This is the OpenAPI definition for the Datamonkey API. 
+ *
+ * API version: 1.0.0
+ * Contact: spond@temple.edu
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+type FELAPI struct {
+}
+
+// Post /api/v1/methods/fel-result
+// Get a FEL job result 
+func (api *FELAPI) GetFELJob(c *gin.Context) {
+	// Your handler implementation
+	c.JSON(200, gin.H{"status": "OK"})
+}
+
+// Post /api/v1/methods/fel-start
+// Start and monitor a FEL job 
+func (api *FELAPI) StartFELJob(c *gin.Context) {
+	// Your handler implementation
+	c.JSON(200, gin.H{"status": "OK"})
+}
+
