# go/api_health.go
@@ -1,0 +1,26 @@
+/*
+ * Datamonkey API
+ *
+ * Datamonkey is a free public server for comparative analysis of sequence alignments using state-of-the-art statistical models. <br> This is the OpenAPI definition for the Datamonkey API. 
+ *
+ * API version: 1.0.0
+ * Contact: spond@temple.edu
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+type HealthAPI struct {
+}
+
+// Get /api/v1/health
+// Check health of Datamonkey 
+func (api *HealthAPI) GetHealth(c *gin.Context) {
+	// Your handler implementation
+	c.JSON(200, gin.H{"status": "OK"})
+}
+
