# go/model_health_details.go
@@ -1,0 +1,18 @@
+/*
+ * Datamonkey API
+ *
+ * Datamonkey is a free public server for comparative analysis of sequence alignments using state-of-the-art statistical models. <br> This is the OpenAPI definition for the Datamonkey API. 
+ *
+ * API version: 1.0.0
+ * Contact: spond@temple.edu
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type HealthDetails struct {
+
+	Slurm Status `json:"slurm,omitempty"`
+
+	Datamonkey Status `json:"datamonkey,omitempty"`
+}
